--- a/index.html
+++ b/index.html
@@ -11,16 +11,13 @@
       width: 100%; height: 100%; font-family: 'Orbitron', sans-serif;
       background: #000; color: #fff; overflow: hidden;
     }
-    .youtube-bg {
+    body::before {
+      content: "";
       position: fixed;
-      top: 0; left: 0;
-      width: 100vw; height: 100vh;
-      z-index: -1;
-    }
-    .youtube-bg iframe {
-      width: 100%; height: 100%;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: radial-gradient(circle at var(--x, 50%) var(--y, 50%), rgba(0, 255, 255, 0.05), transparent 80%);
       pointer-events: none;
-      border: none;
+      z-index: 1;
     }
     nav {
       position: fixed;
@@ -33,6 +30,8 @@
       justify-content: center;
       gap: 30px;
       z-index: 100;
+      animation: slideDown 1s ease-out forwards;
+      opacity: 0;
     }
     nav button {
       background: transparent;
@@ -51,13 +50,12 @@
     #app {
       width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; flex-direction: column;
       transition: 0.3s;
-      z-index: 10;
-      position: relative;
     }
     .screen {
       display: none; flex-direction: column; align-items: center; justify-content: center; text-align: center;
       width: 100vw; height: 100vh; position: absolute; top: 0; left: 0;
-      background: none;
+      background: url('https://images.unsplash.com/photo-1614853036537-2c509b2cc2b7?auto=format&fit=crop&w=2850&q=80') center/cover no-repeat;
+      background-attachment: fixed;
       z-index: 10;
       transition: 0.3s ease-in-out;
     }
@@ -68,9 +66,13 @@
       -webkit-background-clip: text; -webkit-text-fill-color: transparent;
       margin-bottom: 30px;
       z-index: 5;
+      opacity: 0;
+      animation: fadeInUp 1.2s ease-out 0.5s forwards;
     }
     .btn-row {
       display: flex; flex-wrap: wrap; gap: 15px; justify-content: center;
+      opacity: 0;
+      animation: fadeInUp 1s ease-out 1s forwards;
     }
     button {
       background: transparent; border: 2px solid #0ff; color: #0ff;
@@ -86,24 +88,6 @@
       background: #111; border: 1px solid #0ff; color: #0ff;
       padding: 10px 20px; border-radius: 20px; cursor: pointer;
     }
-    .login-box {
-      background: rgba(0, 0, 0, 0.7);
-      border: 2px solid #0ff;
-      border-radius: 15px;
-      padding: 30px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 15px;
-    }
-    .login-box input {
-      padding: 10px 20px;
-      border: none;
-      outline: none;
-      border-radius: 10px;
-      font-size: 1rem;
-      width: 200px;
-    }
     footer {
       position: absolute;
       bottom: 15px;
@@ -111,41 +95,36 @@
       color: #888;
       z-index: 5;
     }
+
+    @keyframes fadeInUp {
+      from { transform: translateY(30px); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
+    }
+
+    @keyframes slideDown {
+      from { transform: translateY(-40px); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
+    }
   </style>
 </head>
 <body>
-  <div class="youtube-bg">
-    <iframe 
-      src="https://www.youtube.com/embed/9jbkJjp8lwA?autoplay=1&mute=1&controls=0&loop=1&playlist=9jbkJjp8lwA&modestbranding=1&showinfo=0&rel=0" 
-      allow="autoplay; fullscreen"
-      allowfullscreen
-    ></iframe>
-  </div>
-
   <nav>
     <button onclick="goTo('mainScreen')">Home</button>
-    <button onclick="goTo('shop')">Shop</button>
     <button onclick="goTo('faq')">FAQ</button>
     <button onclick="goTo('news')">News</button>
     <button onclick="goTo('forum')">Forum</button>
   </nav>
-
   <div id="app">
     <div id="mainScreen" class="screen active">
       <h1>RUSH.IO</h1>
       <div class="btn-row">
         <button onclick="window.open('https://www.roblox.com/games/115765639656471/Beta')">Play</button>
         <button onclick="window.open('https://discord.gg/BnwdPRSKRs')">Discord</button>
+        <button onclick="window.open('https://www.roblox.com/groups/33640455')">Roblox Group</button>
       </div>
       <footer>
         &copy; 2025 rush.io | Site by radicnt & ITypeTooMuchCodes
       </footer>
-    </div>
-
-    <div id="shop" class="screen">
-      <button class="back-btn" onclick="goTo('mainScreen')">← Back</button>
-      <h1>Shop</h1>
-      <p>Weapon skins and cosmetics coming soon.</p>
     </div>
 
     <div id="faq" class="screen">
@@ -172,6 +151,11 @@
       document.querySelectorAll('.screen').forEach(el => el.classList.remove('active'));
       document.getElementById(screenId).classList.add('active');
     }
+
+    document.addEventListener('mousemove', e => {
+      document.body.style.setProperty('--x', `${e.clientX}px`);
+      document.body.style.setProperty('--y', `${e.clientY}px`);
+    });
   </script>
 </body>
 </html>
