--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       position: fixed;
       top: 0;
       width: 100%;
-      background: rgba(0, 0, 0, 0.8);
-      backdrop-filter: blur(8px);
+      background: transparent;
+      backdrop-filter: blur(12px);
       padding: 15px 20px;
       display: flex;
       justify-content: center;
@@ -90,17 +90,20 @@
       font-size: 4rem;
       background: linear-gradient(to right, #00f0ff, #ff00f7);
       -webkit-background-clip: text; -webkit-text-fill-color: transparent;
-      margin-bottom: 10px;
+      margin-bottom: 40px;
       z-index: 5;
       opacity: 0;
       animation: fadeInUp 1.2s ease-out 0.5s forwards;
     }
     #subtext {
+      position: absolute;
+      top: 30px;
+      right: 30px;
       color: #0ff;
-      font-size: 1.1rem;
-      opacity: 0;
-      animation: fadeInUp 1.2s ease-out 1s forwards;
-      height: 30px;
+      font-size: 1rem;
+      opacity: 0.8;
+      font-family: monospace;
+      text-align: right;
     }
     .btn-row {
       display: flex; flex-wrap: wrap; gap: 15px; justify-content: center;
@@ -151,8 +154,8 @@
   </nav>
   <div id="app">
     <div id="mainScreen" class="screen active">
-      <h1>RUSH.IO</h1>
       <div id="subtext"></div>
+      <h1>RUSH.IO</h1>
       <div class="btn-row">
         <button onclick="window.open('https://www.roblox.com/games/115765639656471/Beta')">Play</button>
         <button onclick="window.open('https://discord.gg/BnwdPRSKRs')">Discord</button>
@@ -195,7 +198,6 @@
       document.querySelector('.layer-glow').style.transform = `translate(${offsetX * 40}px, ${offsetY * 40}px)`;
     });
 
-    // rotating subtext
     const lines = [
       'connecting to lobby...',
       'deploying loadout...',
