--- a/index.html
+++ b/index.html
@@ -6,54 +6,167 @@
   <title>rush.io - Roblox FPS</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
   <style>
-    .feedback-modal {
-      display: none;
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    html, body {
+      width: 100%; height: 100%; font-family: 'Orbitron', sans-serif;
+      background: #000; color: #fff; overflow: hidden;
+    }
+    body::before {
+      content: "";
       position: fixed;
-      top: 50%; left: 50%; transform: translate(-50%, -50%);
-      background: rgba(0,0,0,0.95);
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: radial-gradient(circle at var(--x, 50%) var(--y, 50%), rgba(0, 255, 255, 0.05), transparent 80%);
+      pointer-events: none;
+      z-index: 1;
+    }
+    .scanlines {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      background-image: repeating-linear-gradient(to bottom, rgba(255, 255, 255, 0.01) 0, rgba(0, 255, 255, 0.01) 1px, transparent 2px);
+      z-index: 3;
+      pointer-events: none;
+      animation: scan 4s linear infinite;
+    }
+    @keyframes scan {
+      0% { background-position-y: 0; }
+      100% { background-position-y: 100%; }
+    }
+    .vignette {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      background: radial-gradient(circle at center, transparent 60%, rgba(0, 0, 0, 0.5));
+      z-index: 4;
+      pointer-events: none;
+    }
+    .particles {
+      position: fixed;
+      width: 100vw; height: 100vh;
+      pointer-events: none;
+      z-index: 2;
+    }
+    .particle {
+      position: absolute;
+      width: 2px; height: 2px;
+      background: rgba(0,255,255,0.05);
+      border-radius: 50%;
+      animation: float linear infinite;
+    }
+    @keyframes float {
+      from { transform: translateY(0); }
+      to { transform: translateY(-200vh); }
+    }
+    .parallax-layer {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      background-position: center;
+      background-size: cover;
+      pointer-events: none;
+    }
+    .layer-base {
+      background-image: url('https://images.unsplash.com/photo-1614853036537-2c509b2cc2b7?auto=format&fit=crop&w=2850&q=80');
+      z-index: 0;
+    }
+    .layer-grid {
+      background-image:
+        linear-gradient(to right, rgba(0,255,255,0.03) 1px, transparent 1px),
+        linear-gradient(to bottom, rgba(0,255,255,0.03) 1px, transparent 1px);
+      background-size: 40px 40px;
+      z-index: 1;
+    }
+    .layer-glow {
+      background-image: radial-gradient(rgba(0,255,255,0.05) 1px, transparent 40%);
+      background-size: 200% 200%;
+      z-index: 2;
+    }
+    nav {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background: transparent;
+      backdrop-filter: blur(12px);
+      padding: 15px 20px;
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+      z-index: 100;
+      animation: slideDown 1s ease-out forwards;
+      opacity: 0;
+    }
+    nav button {
+      background: transparent;
       border: 1px solid #0ff;
-      padding: 30px;
-      border-radius: 10px;
-      z-index: 999;
       color: #0ff;
-      width: 320px;
-      animation: fadeIn 0.3s ease-out;
+      padding: 10px 20px;
+      border-radius: 20px;
+      cursor: pointer;
+      transition: 0.3s, box-shadow 0.3s;
+      font-size: 0.9rem;
     }
-    .feedback-modal textarea {
-      width: 100%;
-      height: 100px;
-      padding: 10px;
-      border-radius: 5px;
-      border: none;
-      margin-bottom: 10px;
-      background: #111;
-      color: #0ff;
-      font-family: monospace;
-    }
-    .feedback-modal button {
-      width: 100%;
-      padding: 10px;
-      border-radius: 5px;
-      border: none;
+    nav button:hover {
       background: #0ff;
       color: #000;
-      cursor: pointer;
-      font-weight: bold;
-      transition: 0.2s ease;
+      box-shadow: 0 0 12px #0ff;
     }
-    .feedback-modal button:hover {
-      background: #00cccc;
+    #app {
+      width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; flex-direction: column;
+      transition: 0.3s;
+      position: relative;
+      z-index: 10;
     }
-    .feedback-modal-close {
+    .screen {
+      display: none; flex-direction: column; align-items: center; justify-content: center; text-align: center;
+      width: 100vw; height: 100vh; position: absolute; top: 0; left: 0;
+      background: transparent;
+      z-index: 10;
+      transition: 0.3s ease-in-out;
+    }
+    .screen.active { display: flex; z-index: 20; }
+    h1 {
+      font-size: 4rem;
+      background: linear-gradient(to right, #00f0ff, #ff00f7);
+      -webkit-background-clip: text; -webkit-text-fill-color: transparent;
+      margin-bottom: 40px;
+      z-index: 5;
+      opacity: 0;
+      animation: fadeInUp 1.2s ease-out 0.5s forwards;
+    }
+    .btn-row {
+      display: flex; flex-wrap: wrap; gap: 15px; justify-content: center;
+      opacity: 0;
+      animation: fadeInUp 1s ease-out 1.4s forwards;
+    }
+    button {
+      background: transparent; border: 2px solid #0ff; color: #0ff;
+      padding: 12px 30px; border-radius: 30px; font-size: 1.1rem;
+      cursor: pointer; transition: 0.3s, transform 0.3s, box-shadow 0.3s;
+      z-index: 5;
+    }
+    button:hover {
+      background: #0ff; color: #000; transform: scale(1.05);
+      box-shadow: 0 0 20px #0ff;
+    }
+    .back-btn {
+      position: absolute; top: 70px; left: 20px;
+      background: #111; border: 1px solid #0ff; color: #0ff;
+      padding: 10px 20px; border-radius: 20px; cursor: pointer;
+    }
+    footer {
       position: absolute;
-      top: 5px; right: 10px;
-      color: #0ff;
-      cursor: pointer;
-      font-size: 1.2rem;
+      bottom: 15px;
+      font-size: 0.9rem;
+      color: #888;
+      z-index: 5;
     }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translate(-50%, -60%); }
-      to { opacity: 1; transform: translate(-50%, -50%); }
+    @keyframes fadeInUp {
+      from { transform: translateY(30px); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
+    }
+    @keyframes slideDown {
+      from { transform: translateY(-40px); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
     }
   </style>
 </head>
@@ -69,16 +182,7 @@
     <button onclick="goTo('faq')">FAQ</button>
     <button onclick="goTo('news')">News</button>
     <button onclick="goTo('forum')">Forum</button>
-    <button onclick="document.getElementById('feedbackModal').style.display = 'block'">Feedback</button>
   </nav>
-
-  <div id="feedbackModal" class="feedback-modal">
-    <span class="feedback-modal-close" onclick="document.getElementById('feedbackModal').style.display = 'none'">×</span>
-    <h3>Send Feedback</h3>
-    <textarea id="feedbackText" placeholder="Type your feedback here..."></textarea>
-    <button onclick="sendFeedback()">Submit</button>
-  </div>
-
   <div id="app">
     <div id="mainScreen" class="screen active">
       <h1>RUSH.IO</h1>
@@ -135,26 +239,6 @@
       p.style.animationDuration = `${4 + Math.random() * 6}s`;
       p.style.opacity = Math.random() * 0.4;
       particles.appendChild(p);
-    }
-
-    function sendFeedback() {
-      const text = document.getElementById("feedbackText").value.trim();
-      if (!text) return alert("Please enter your feedback first.");
-
-      fetch("https://discord.com/api/webhooks/1363692731817394236/gddKBbIz9DMTa4snu0Fyz7P1f9-4ND_y3z98iTmtdCe8zJNkIhQrRtfq7qfMZKROihZ1", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ content: `📨 New feedback from rush.io site:\n${text}` })
-      })
-      .then(res => {
-        if (res.ok) {
-          alert("✅ Feedback sent successfully!");
-          document.getElementById("feedbackText").value = "";
-          document.getElementById("feedbackModal").style.display = "none";
-        } else {
-          alert("⚠️ Failed to send feedback.");
-        }
-      });
     }
   </script>
 </body>
