--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
     <button onclick="goTo('faq')">FAQ</button>
     <button onclick="goTo('news')">News</button>
     <button onclick="goTo('forum')">Forum</button>
+    <button onclick="goTo('feedback')">Feedback</button>
   </nav>
   <div id="app">
     <div id="mainScreen" class="screen active">
@@ -209,6 +210,14 @@
       <button class="back-btn" onclick="goTo('mainScreen')">← Back</button>
       <h1>Forum</h1>
       <p>Player discussions and feedback soon.</p>
+    </div>
+    <div id="feedback" class="screen">
+      <button class="back-btn" onclick="goTo('mainScreen')">← Back</button>
+      <h1>Feedback</h1>
+      <textarea id="feedbackText" placeholder="Type your feedback..." style="width: 60%; height: 200px; padding: 10px; font-family: inherit; font-size: 1rem; background: #111; color: #0ff; border: 1px solid #0ff; border-radius: 10px;"></textarea>
+      <br><br>
+      <button onclick="sendFeedback()">Send</button>
+      <p id="feedbackStatus" style="margin-top: 15px; color: #0f0;"></p>
     </div>
   </div>
   <script>
@@ -239,6 +248,34 @@
       p.style.animationDuration = `${4 + Math.random() * 6}s`;
       p.style.opacity = Math.random() * 0.4;
       particles.appendChild(p);
+    }
+
+    // webhook feedback system
+    async function sendFeedback() {
+      const feedback = document.getElementById("feedbackText").value.trim();
+      const status = document.getElementById("feedbackStatus");
+
+      if (feedback === "") {
+        status.innerText = "Please enter something.";
+        return;
+      }
+
+      const webhookUrl = "https://discord.com/api/webhooks/1363692731817394236/gddKBbIz9DMTa4snu0Fyz7P1f9-4ND_y3z98iTmtdCe8zJNkIhQrRtfq7qfMZKROihZ1";
+
+      try {
+        await fetch(webhookUrl, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({
+            content: `📝 **New Feedback Submitted:**\n${feedback}`
+          })
+        });
+        status.innerText = "Feedback sent. Thank you!";
+        document.getElementById("feedbackText").value = "";
+      } catch (err) {
+        status.innerText = "Failed to send feedback.";
+        console.error(err);
+      }
     }
   </script>
 </body>
